<resources>
    <string name="app_name">EasyPoints</string>
</resources>
